# llamaX

./: CMakeLists.txt  CMakePresets.json  README.md  build-for-debug.sh
docs/backend/: PORN.md
examples/simple/: simple.cpp
ggml/: CMakeLists.txt
ggml/include/: ggml-backend-devs.h
ggml/src/: CMakeLists.txt  ggml-backend-devs.cpp  ggml-backend-reg.cpp  ggml-impl.h  ggml-profile.cpp  ggml-profile.h  ggml.c
ggml/src/ggml-cpu/: ggml-cpu.c
ggml/src/ggml-cuda/: ggml-cuda.cu
ggml/src/ggml-opencl/: CMakeLists.txt  ggml-opencl.cpp
ggml/src/ggml-opencl/kernels/: get_rows.cl  mul_mat_f16_f32.cl  mul_mm_f16_f32_l4_lm.cl  mul_mv_id_mxfp4_f32.cl  mul_mv_id_mxfp4_f32_flat.cl  mul_mv_id_q4_0_f32_8x_flat.cl  mul_mv_id_q8_0_f32.cl  mul_mv_id_q8_0_f32_flat.cl  mul_mv_mxfp4_f32.cl  mul_mv_mxfp4_f32_flat.cl  mul_mv_q4_0_f32.cl  mul_mv_q4_0_f32_1d_16x_flat.cl  mul_mv_q4_0_f32_1d_8x_flat.cl  mul_mv_q4_0_f32_8x_flat.cl  mul_mv_q4_0_f32_v.cl  mul_mv_q6_k.cl  mul_mv_q8_0_f32.cl  mul_mv_q8_0_f32_flat.cl
ggml/src/ggml-ponn/: CMakeLists.txt  common.h  ggml-ponn.cpp  ggml-ponn.h  ops.cpp  ops.h  ponn.h  utils.cpp  utils.h
scripts/: build-with-profiler.sh
src/: CMakeLists.txt
